# comms_arm

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotic_arm_6dof/share/robotic_arm_6dof/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotic_arm_6dof/share/robotic_arm_6dof/config/: joint_names_robotic_arm_6dof.yaml
install/robotic_arm_6dof/share/robotic_arm_6dof/meshes/: gear_left.STL  gear_right.STL
install/robotic_arm_6dof/share/robotic_arm_6dof/rviz/: config.rviz
src/aligned_arm/: CMakeLists.txt  package.xml
src/aligned_arm/config/: joint_names_aligned_arm.yaml
src/aligned_arm/launch/: display.launch.py  gazebo.launch.py
src/aligned_arm/meshes/: anchor_right.STL  base_link.STL  elbow.STL  finger_left.STL  finger_right.STL  scoop.STL  shoulder.STL  wrist.STL  wrist2.STL
src/aligned_arm/urdf/: aligned_arm copy.urdf  aligned_arm.csv  aligned_arm.urdf  arm_with_digger.urdf  gripper.urdf  scoop.urdf
src/lazy_arm/: package.xml  setup.cfg  setup.py
src/lazy_arm/lazy_arm/: image_display.py
src/robotic_arm_6dof/: CMakeLists.txt
src/robotic_arm_6dof/launch/: display.launch.py
src/robotic_arm_6dof/meshes/: anchor_left.STL
src/robotic_arm_6dof/rviz/: config.rviz
src/robotic_arm_6dof/urdf/: robotic_arm_6dof.csv  robotic_arm_6dof.urdf
